# negos

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: io.rs  kernel.rs  malloc.rs  proc.rs  sbicall.rs  trap.rs
