[package]
name = "rust-1000lineos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "kernel_elf"
path = "src/kernel.rs"
